tests/baselines/reference/varArgWithNoParamName.errors.txt
varArgWithNoParamName.ts(1,13): error TS7019: Rest parameter '(Missing)' implicitly has an 'any[]' type.
varArgWithNoParamName.ts(1,16): error TS1003: Identifier expected.


==== varArgWithNoParamName.ts (2 errors) ====
    function t1(...) {}
                ~~~
!!! error TS7019: Rest parameter '(Missing)' implicitly has an 'any[]' type.
                   ~
!!! error TS1003: Identifier expected.